Migrate i18n for pages "results" and "tree"
issue #46

--- a/scripts/l10n/cs.json
+++ b/scripts/l10n/cs.json
@@ -12,5 +12,189 @@
   "ui_results_back": "Zpět na index",
   "ui_results_credits": "Autoři",
   "ui_tree_title": "Ideosorter - Strom",
-  "ui_tree_info": "You can use arrows to navigate or mouse click to focus some path."
+  "ui_tree_info": "You can use arrows to navigate or mouse click to focus some path.",
+  "question_private_property": "Mělo by soukromé vlastnictví existovat?",
+  "question_theo": "Měla by společnost být řízena prostředníky božstva?",
+  "question_distributism": "Mělo by soukromé vlastnictví být rozšířeno co nejvíce?",
+  "question_conditional_land_ownership": "Mělo by vlastnictví pozemku být podmínečné nebo nepodmínečné?",
+  "question_scope_of_government1": "Měla by velikost vlády být omezena?",
+  "question_watchman_state": "Měla by vláda být čistě “stát noční hlídky”?",
+  "question_welfare": "Mělo by být zaměření na pomoc znevýhodněným?",
+  "question_welfare_needed": "Byly by socialní dávky zapotřebí v neregulované trhové ekonomice?",
+  "question_limited_gov_tradvals": "Myslíte si, že větší omezení vlády by vedlo ke znovuobnově tradičních hodnot?",
+  "question_tradvals": "Byly by ve Vaší ideální společnosti prosazovány tradiční hodnoty?",
+  "question_tradauthstate": "Považujete autoritativní stát za nutný v zabezpečení hodnot a nezávislosti Vašeho národa?",
+  "question_corp_cap": "Měla by vláda prosazovat kapitalismus nebo korporatismus?",
+  "question_markreg": "Měl by trh být úzce regulován?",
+  "question_unions_vs_state": "Měla by ekonomie být organizována odbory, nebo státem?",
+  "question_clergygov": "Mělo by duchovenstvo být součástí vlády?",
+  "question_racesuperior": "Považujete svou rasu za nadřazenou všem ostatním?",
+  "question_strong_safety_net": "Měla by tu být silná sociální síť záchrany?",
+  "question_intervgov": "Měla by vláda zasahovat ve válkách neohrožujících národní nezávislost Vaší země?",
+  "question_govbasicneeds": "Měla by vláda poskytovat základní potřeby jejím občanům?",
+  "question_econreg": "Měla by ekonomie být úzce regulována?",
+  "question_counter_economics": "Měla by tzv. kontraekonomika být základem přivození ideální společnosti?",
+  "question_coop_ancap": "Myslíte si, že kompletně neregulovaná společnost vyústí v trh dominovaný družstvy?",
+  "question_scope_of_government2": "Mělo by vládní pole působnosti být omezeno?",
+  "question_landwelfare": "Měl by se zisk z daní hodnoty pozemku využít primárně na sociální zabezpečení?",
+  "question_market": "Mělo by přiřazování zboží být řízeno tržními mechanismy?",
+  "question_statesoc": "Měl by existovat silný autoritní stát na ochranu dělnické třídy před ostatními národy?",
+  "question_mutualaid": "Měla by ekonomie být založena na principech vzájemné pomoci?",
+  "question_racism": "Měly by komunity být tvořeny etnicky stejnorodými populacemi?",
+  "question_marx": "měl by cíl naší společnosti být pohyb ke společnosti, která je beztřídní, bezpeněžná a bezstátní?",
+  "question_transstate": "Je k dosažení tohoto cíle nutný přechodný stát?",
+  "question_soc_directstate1": "Měli by dělníci přímo vlastnit prostředky výroby, nebo by je měl ovládat stát?",
+  "question_vanguard": "Je k vedení dělnické třídy v revoluci nutná předvojová strana?",
+  "question_vanguard_ed": "Měla by role této předvojové strany být pouze v edukaci dělnictva (v protikladu k nějaké formě politického vedení)?",
+  "question_cultural_revolution": "Měla by tu být kulturní revoluce k odstranění reakčních myšlenek ze společnosti?",
+  "question_3worlds": "Souhlasíte s Teorií tří světů od Mao Ce-tunga?",
+  "question_nep": "Myslíte si, že vícegenerační fáze státního kapitalismu je nutná k přípravě ekonomie na socialismus?",
+  "question_socinone": "Myslíte si, že je možné dosáhnout socialismu v jedné zemi?",
+  "question_aboveall1": "Myslíte si, že národ je nejvyšší důležitostí nade vše?",
+  "question_posadism": "Myslíte si, že nejlepším způsobem dosažení socialismu je skrz apokalyptickou událost?",
+  "question_rev_ed": "Měla by existovat revoluční strana na učení lidí při revoluci a po ní?",
+  "question_synd1": "Měla by společnost být organizována pomocí odborů?",
+  "question_centplan": "Měla by společnost být cetrálně plánovaná?",
+  "question_mediabad": "Jsou hromadná média Váš nejdůležitější problém s kapitalismem?",
+  "question_labvouch": "Měla by společnost mít pracovní vouchery jako kompenzaci za práci?",
+  "question_agriculture": "Mělo by se užívat zemědělství?",
+  "question_synd2": "Měla by společnost být organizována pomocí odborů?",
+  "question_techno": "Měl(a) by stát/ekonomie být řízena pouze odborníky?",
+  "question_electsoc": "Měl by socialismus být dosažen pomocí elektoralismu nebo revoluce?",
+  "question_soc_directstate2": "Měli by dělníci přímo vlastnit prostředky výroby, nebo by je měl ovládat stát?",
+  "question_esobullshit": "Měla by hlavním předmětem politické diskuze být třída/národ, nebo by tím měla být lidská esence zvaná dasen?",
+  "question_bankjews": "Myslíte si, že zdrojem všech ekonomických problémů jsou židovští bankéři?",
+  "question_aboveall2": "Myslíte si, že by národ měl být nejvyšší důležitosti nade vše?",
+  "question_agriculture_industrial": "Měla by společnost být zaměřena více na zemědělství, než na průmyslovou výrobu?",
+  "question_synd3": "Měla by společnost být organizována pomocí odborů?",
+  "ideo_4theory": "Jste čtvrtý teoretik",
+  "ideo_4theory_desc": "Čtvrtá politická teorie je ideologie vymyšlena ruským politickým analytikem Aleksandrem Duginem, snažící se najít nobou politickou teorii mimo liberalismus, marxismus a fašismus.",
+  "ideo_agorism": "Jste agorista",
+  "ideo_agorism_desc": "Agorismus je ideologie vymyšlena Samuelem Edwardem Konkinem III, snažící se nastolit společnost, v níž všechny výměny jsou dobrovolné, prostředkem účasti v kontraekonomických aktivitách.",
+  "ideo_agsoc": "Jste agrární socialista",
+  "ideo_agsoc_desc": "Agrární socialismus je ideologie snažící se zkombinovat agrární život a socialistický ekonomický systém, soustředící se hlavně na přerozdělování půdy a společenské vlastnictví.",
+  "ideo_ancap": "Jste anarchokapitalista",
+  "ideo_ancap_desc": "Anarchokapitalismus (také zvaný voluntarismus) je ideologie obhajující vznik bezvládní společnosti založené na právech k soukromému vlastníctví a principu neagrese.",
+  "ideo_ancol": "Jste anarchokolektivista",
+  "ideo_ancol_desc": "Anarchokolektivismus je ideologie snažící se o vytvoření bezvládní společnosti s prostředky výroby vlastněnými dělníky a směnou zboží za pracovní poukázky reprezentující práci dělníka.",
+  "ideo_ancom": "Jste anarchokomunista",
+  "ideo_ancom_desc": "Anarchokomunismus je ideologie snažící se nastolit bezvládní, beztřídní a bezpeněžita společnost založenou na dárkové ekonomice vzájemné pomoci.",
+  "ideo_angeo": "Jste geoanarchista",
+  "ideo_angeo_desc": "Geoanarchismus je ideologie obhajující nastoliení bezvládní společnosti, kde je přitomno soukromé vlastnictví firem, ale jejich použití je zdaněno do komunitního vzájemného fondu.",
+  "ideo_anprim": "Jste anarchoprimitivista",
+  "ideo_anprim_desc": "Anarchoprimitivismus je ideologie obhajující návrat k životu před civilizací. Tato ideologie je unikátní v její opozici k zemědělství a přijmutí životního stylu lovce-sběrače.",
+  "ideo_ansynd": "Jste anarchosyndikalista",
+  "ideo_ansynd_desc": "Anarchosyndikalismus je ideologie snažící se o využití moci dělnických hnutí na vytvoření postkapitalistické bezvládní společnosti založené na dělníky vlastněných prostředcích výroby.",
+  "ideo_bhl": "Jste neoklasický libertarián",
+  "ideo_bhl_desc": "Neoklasický libertarianismus je ideologie považující rozšíření občanských práv za nejvíce prospěšné znevýhodněným.",
+  "ideo_bordiga": "Jste bordigista",
+  "ideo_bordiga_desc": "Italský levý komunismus je ideologie, která má neochvejně antirevisionistický přístup k dílům Marxe a Lenina, k jejimž následnovníkům je velmi kritická.",
+  "ideo_castro": "Jste castrista",
+  "ideo_castro_desc": "Castrismus je ideologie vytvořená z aplikace marxismu-leninismu na podmínky Kuby, většinově se odlišující v roli avantgardní strany.",
+  "ideo_fascism": "Jste klasický fašista",
+  "ideo_fascism_desc": "Fašismus je forma krajně pravicového autoritářského ultranacinalismu charakterizovaného diktátorskou mocí, násilným potlačováním opozice a silnou regimentací společnosti a ekonomiky.",
+  "ideo_clerfash": "Jste klerofašista",
+  "ideo_clerfash_desc": "Klerofašismus je ideologie kombinující politické a ekonomické doktríny fašismu s klerikalismem.",
+  "ideo_councom": "Jste radní komunista",
+  "ideo_councom_desc": "Radní komunismus je ideologie tvrdící, že úspěšná socialistická společnost musí být řízena dělnickými radami a nikoliv politickými stranami.",
+  "ideo_deleon": "Jste de leonista",
+  "ideo_deleon_desc": "De leonismus je ideologie kombinující syndikalistickou organizaci práce s marxistickými nápady, jako například koncept diktatury proletariátu.",
+  "ideo_demsoc": "Jste demokratický socialista",
+  "ideo_demsoc_desc": "Demokratický socialismus je ideologie snažící se vytvořit socialismus za pomocí reforem a volebních procesů, nikoliv revolučně.",
+  "ideo_deng": "Jste dengista",
+  "ideo_deng_desc": "Dengismus je ideologie považující období státem spravovaného kapitalismu za nezbytné v tvorbě úspěšné socialistické společnosti.",
+  "ideo_distributism": "Jste distributista",
+  "ideo_distributism_desc": "Distributismus je středopravicová ideologie třetí cesty, prosazující volný trh.",
+  "ideo_geolib": "Jste geolibertarián",
+  "ideo_geolib_desc": "Geolibertarianismus je ideologie směšující georgistické principy volného obchodu, volné půdy a daní z hodnoty pozemku s libertariánským principem minimální moci vlády",
+  "ideo_georgism": "Jste georgista",
+  "ideo_georgism_desc": "Georgismus je ideologie tvrdící, že pro skutečně volný trh je potřeba rozbít monopol pozemků. Tato ideologie prosazuje daň z hodnoty pozemku, která při správné implementaci dekomodifikuje vlastnictví půdy.",
+  "ideo_leftroth": "Jste levicový rothbardianista",
+  "ideo_leftroth_desc": "Levicový rothbardianismus je levicová reakce na tradiční rothbardovský anarchokapitalismus, která vidí anarchokapitalistickou společnost jako ideální místo na dosažení tradičně levicových cílů, jako je sociální a ekonomická rovnost.",
+  "ideo_libert": "Jste pravicový libertarián",
+  "ideo_libert_desc": "Pravicový libertarianismus je ideologie podporující kapitalistická práva na soukromé vlastnictví a obraňuje tržní distribuci přírodních zdrojů a soukromé vlastnictví",
+  "ideo_libsoc": "Jste socialistický libertarián",
+  "ideo_libsoc_desc": "Libertariánský socialismus je ideologie tvrdící, že prostředky výroby by měly být přímo vlastněny a spravovány dělníky s minimální státní interferencí v ekonomice, a nikoliv vlastněny státem, jak smýšlí státní socialismus.",
+  "ideo_lib": "Jste keynesiánský liberál",
+  "ideo_lib_desc": "Keynesiánský liberalismus je forma liberálního kapitalismu tvrdící, že k adekvátní funkci trhu je nutné, aby trh byl pod dohledem intervencionistického státu.",
+  "ideo_luxem": "Jste luxembugista",
+  "ideo_luxem_desc": "Luxemburgismus je marxistická, libertariánská, protiválečná a velmi progresivní ideologie tvrdící to, že diktatura proletariátu by měla být provozována demokratickými radami dělníků a nikoliv socialistickou stranou.",
+  "ideo_lwma": "Jste levicový tržní anarchista",
+  "ideo_lwma_desc": "Levicový tržní anarchismus je ideologie snažící se vyvořit společnost založenou na postkapitalistické tržní ekonomice.",
+  "ideo_mao": "Jste maoista",
+  "ideo_mao_desc": "Maoismus je odrůda marxismu-leninismu vytvořena Mao Zedongem pro realizaci socialistické revoluce v zeměděleské, předindustriální společnosti v Číně. Její hlavní rozdíl je v tom, že revoluční snažení je vedeno hlavně sedlactvem namísto proletarátu.",
+  "ideo_marksoc": "Jste tržní socialista",
+  "ideo_marksoc_desc": "Tržní socialismus je ideologie kombinující socialistický ideál vlastnictví výrobních prostředků dělníky s konkurencí a alokací zdrojů v tržní ekonomice.",
+  "ideo_minarch": "Jste minarchista",
+  "ideo_minarch_desc": "Minarchismus je ideologie tvrdící, že jedinými účely státu by měla být ochrana svých občanů a jejich práv na vlastnictví, přinášet zlořince před soud a hlídat oblast země proti invazím.",
+  "ideo_mlm": "Jste marxista-leninista-maoista",
+  "ideo_mlm_desc": "Marxismus-leninismus-maoismus je ideologie vytvořená Komunistickou stranou Peru, míchající názory marxismu-leninismu a maoismu, přičemž z druhého odmítá určité aspekty, jako je například teorie tří světů.",
+  "ideo_ml": "Jste marxista-leninista",
+  "ideo_ml_desc": "Marxismus-leninismus je ideologie tvrdící, že nastolení a doplňování socialismu je nutnost před vývozem revoluce do okolních zemí, čímž se odlišuje od trotckistického ideálu permanentní revoluce.",
+  "ideo_mutualism": "Jste mutualista",
+  "ideo_mutualism_desc": "Mutualismus je ideologie snažící se vytvořit bezvládní společnost založenou na volném obchodu se zbožím mezi individuály při existenci vzájemné úvěrové banky a struktur vzájemné pomoci.",
+  "ideo_natan": "Jste národní anarchista",
+  "ideo_natan_desc": "Národní anarchismus je ideologie snažící se vytvořit bezvládní společnost vytvořenou z etnicky omezených komun založenou na meritokratickém ekonomickém systému.",
+  "ideo_natsynd": "Jste národní syndikalista",
+  "ideo_natsynd_desc": "Národní syndikalismus je adaptace syndikalismu pro potřeby sociální agendy integrálníního nacionalismu.",
+  "ideo_nazbol": "Jste národní bolševik",
+  "ideo_nazbol_desc": "Národní bolševismus je politické hnutí, které kombinuje prvky fašismu a bolševismu.",
+  "ideo_nazcap": "Jste národní kapitalista",
+  "ideo_nazcap_desc": "Národní kapitalismus he ekonomicky pravicová, kulturně tradicionalistická, nacionalistická a fašistická ideologie.",
+  "ideo_nazi": "Jste národní socialista",
+  "ideo_nazi_desc": "Národní socialismus je forma fašismu pohrdající liberální demokracií a parlamentním systémem vlády. Míchá vášnivý antisemitismus, antikomunismus, vědecký racismus a používání eugeniky.",
+  "ideo_neocon": "Jste neokonzervativec",
+  "ideo_neocon_desc": "Neokonzervatismus podporuje demokracii a intervencionismus v mezinárodních záležitostech, jako je třeba myšlenka 'mír skrz sílu'. Tato ideologie je známá pro pohrdání komunismem a politickým radkalismem.",
+  "ideo_neolib": "Jste neoliberál",
+  "ideo_neolib_desc": "Neoliberalismus je sloučení neoklasických a keynesiánských ekonomických myšlenek snažící se najít rovnováhu mezi regulacemi a volným trhem.",
+  "ideo_orthmarx": "Jste ortodoxní marxista",
+  "ideo_orthmarx_desc": "Ortodoxní marxismus je ekonomicky krajně levicová a progresivní ideologie snažící se vytvořit komunistickou společnost, která by byla bezvládní, beztřídní a bezpeněžitá.",
+  "ideo_paleobert": "Jste paleolibertarián",
+  "ideo_paleobert_desc": "Paleolibertarianismus je ideologie vytvořená americkými teoretiky anarchokapitalismu Murrayem Rothbardem a Lewem Rockwellem kombinující tradiční konzervativní kulturní hodnoty a sociální filozofii s libertáriánskou opozicí k vládním zásahům do ekonomiky.",
+  "ideo_paleocon": "Jste paleokonervativec",
+  "ideo_paleocon_desc": "Paleokonzervatismus je forma konzervatismu, která se původně objevila v izolacionistických oddílech amerického konzervatismu, které se stavěly proti vietnamské válce. Paleokonzervativci také většinou odmítají volný glóbalní trh, kde preferují protekcionistický přístup se silnými cly.",
+  "ideo_patcon": "Jste paternalistický konzervativec",
+  "ideo_patcon_desc": "Paternalistický konzervatismus je ideologie snažící se zkombinovat sociálně demokratické principy regulovaného kapitalismu a silné odbory práce s tradičními hodnotami.",
+  "ideo_posadism": "Jste posadista",
+  "ideo_posadism_desc": "Posadismus je radikálně akcelerativní forma trotskyismu považující jaderné zničení kapitalistické společnosti za nutnost k nastolení celosvětového socialismu (samozřejmě s malou pomocí našich mimozemkých soudruhů).",
+  "ideo_situationist": "Jste situacionista",
+  "ideo_situationist_desc": "Situacionismus je hnutí avantgardních libertariánských marxistů zaměřujících se prvořadně na kritiku kapitalismu za pomoci umění.",
+  "ideo_socbert": "Jste sociální libertarián",
+  "ideo_socbert_desc": "Sociální libertarianismus je forma 'libertarianismu krvácejícího srdce' tvrdící to, že univerzální základní příjem zkombinovaný s maximem osobních svobod je nutnost při vytvoření spravedlivé společnosti pro všechny, včetně těch nejvíce sociálně znevýhodněných.",
+  "ideo_socdem": "Jste sociální demokrat",
+  "ideo_socdem_desc": "Sociální demokracie je ideologie snažící se nastolit společnost, kde kapitalismus je regulován a řízen státem a silnými pracovními odbory s cílem dosažení prospěšných výsledků pro dělnickou třídu.",
+  "ideo_socgeo": "Jste sociální georgista",
+  "ideo_socgeo_desc": "Sociální georgismus je ideologie , která tvrdí, že georgistické principy veřejného vlastnictví půdy a daně z hodnoty pozemku perfektně doplňují volnotržní welfaristickou společnost. Nejvýraznější advokát této ideologie je čínský revolucionář a první prezident Čínské repuliky, Sunjatsen",
+  "ideo_socnat": "Jste sociální nacionalista",
+  "ideo_socnat_desc": "Sociální nacionalismus je forma nacionalismu založená na národním sebeurčení, populární samostatnosti a socální rovnosti.",
+  "ideo_statesoc": "Jste státní socialista",
+  "ideo_statesoc_desc": "Státní socialismus je ideologie tvrdící, že prostředky výroby by měly být vlastněny a spravovány státem, nikoliv jako u libertariánského socialismu.",
+  "ideo_strasser": "Jste strasserista",
+  "ideo_strasser_desc": "Strasserismus je ideologie popularizovaná bratry Strassery snažící se sloučit levicovou ekonomiku a pravicový ultranacionalismus.",
+  "ideo_synd": "Jste syndikalista",
+  "ideo_synd_desc": "Syndikalismus je ideologie snažící se rozšířit potřeby a práva dělníků prostřednictvím stávek.",
+  "ideo_technocracy": "Jste technokrat",
+  "ideo_technocracy_desc": "Technokracie je ideologie tvrdící, že stát a ekonomie by měly být řízeny experty svého oboru místo zvolených/vyděděných politiků a podnikatelů",
+  "ideo_theocracy": "Jste teokrat",
+  "ideo_theocracy_desc": "Teokracie je ideologie, kde vládci jsou určeni k jednání jako reprezentace božstva a vynucování zákonů jejich náboženství na občany.",
+  "ideo_tito": "Jste titoista",
+  "ideo_tito_desc": "Titoismus je ideologie snažící se zkombinovat avantgardní povahu leninismu s tržně socialistickou ekonomikou a prostředky výroby vlastněnými dělníky.",
+  "ideo_trot": "Jste trotskyista",
+  "ideo_trot_desc": "Trotskyismus je ideologie tvrdící, že permanentní revoluce po celém světě je nutnost k dosažení socialismu, čímž se odlišuje od marxistické-leninistické myšlenky socialismu v jedné zemi.",
+  "btn_yes": "Ano",
+  "btn_no": "Ne",
+  "btn_nostate": "Stát by neměl existovat",
+  "btn_conditional": "Podmínečné",
+  "btn_unconditional": "Nepodmínečné",
+  "btn_capitalism": "Kapitalismus",
+  "btn_corporatism": "Korporatismus",
+  "btn_workers": "Dělníci",
+  "btn_unions": "Odbory",
+  "btn_state": "Stát",
+  "btn_electoralism": "Elektoralismus",
+  "btn_revolution": "Revoluce",
+  "btn_welfare": "Socialní dávky",
+  "btn_noneed": "Není potřeba",
+  "btn_dasein": "Dasen",
+  "btn_classnation": "Třída/Národ"
 }
