Added tree link to index, updated discord tag,fixed some typos and generalized large-button CSS

--- a/scripts/l10n/pt.json
+++ b/scripts/l10n/pt.json
@@ -2,17 +2,18 @@
   "lang_name": "Português (Not finished)",
   "translators": "<li> <a href=\"https://github.com/TheGhostOfInky\" >TheGhostOfInky</a></li>",
   "ui_index_title": "Ideosorter",
-  "ui_index_text": "<h2>O que é o Ideosorter?</h2><p>Ideosorter é, em essência, um teste político que atempta atribuir uma ideologia que se aproxima dos seus ideais politicos perguntando questões orientadas num estilo de um fluxograma. Este teste irá atribuir-lhe uma de <span id='ideo_lenght'></span> diferentes ideologias politicas com base nas suas repostas às questões dadas; talvês descobirá algo que não conhece sobre si!</p><h2>Eu não entendo uma das questões!</h2><p>Se houver algo que não preceba nõs tentamos utilizar terminologia o mais fácil de pesquisar possivel e se houver algo não claro, pode contactar-nos com quaisquer comentários de modo a podermos fazer alterações ao teste!</p><h2>Eu não gosto da ideologia que me foi designada!</h2><p>¯\\_(ツ)_/¯</p>",
+  "ui_index_text": "<h2>O que é o Ideosorter?</h2><p>Ideosorter é, em essência, um teste político que atempta atribuir uma ideologia que se aproxima dos seus ideais politicos perguntando questões orientadas num estilo de um fluxograma. Este teste irá atribuir-lhe uma de <span id='ideo_length'></span> diferentes ideologias politicas com base nas suas repostas às questões dadas; talvês descobirá algo que não conhece sobre si!</p><h2>Eu não entendo uma das questões!</h2><p>Se houver algo que não preceba nõs tentamos utilizar terminologia o mais fácil de pesquisar possivel e se houver algo não claro, pode contactar-nos com quaisquer comentários de modo a podermos fazer alterações ao teste!</p><h2>Eu não gosto da ideologia que me foi designada!</h2><p>¯\\_(ツ)_/¯</p>",
   "ui_index_start": "Clique aquí para começar!",
+  "ui_index_tree": "Ver a árvore de resultados",
   "ui_index_contacts": "Contactos:",
-  "ui_index_contact_info": "<p>TheGhostOfInky#9229</p><p>theghostofinky@gmail.com</p><p><a href=\"https://github.com/Ideosorter/ideosorter.github.io\">Página Github</a></p>",
+  "ui_index_contact_info": "<p>TheGhostOfInky#2853</p><p>theghostofinky@gmail.com</p><p><a href=\"https://github.com/Ideosorter/ideosorter.github.io\">Página Github</a></p>",
   "ui_quiz_title": "Ideosorter - Teste",
   "ui_quiz_back": "Anterior",
   "ui_results_title": "Ideosorter - Resultados",
   "ui_results_back": "Voltar ao índice",
   "ui_results_credits": "Créditos",
   "ui_tree_title": "Ideosorter - Árvore",
-  "ui_tree_info": "Você pode usar as setas para navegar, ou clique para focar um caminho.",
+  "ui_tree_info": "Você pode usar as setas para navegar, ou clicar para focar num caminho.",
   "question_private_property": "Deveria existir propriedade privada?",
   "question_theo": "A sociedade deveria ser administrada por intermediários de uma divindade?",
   "question_distributism": "A propriedade privada deve ser distribuída o mais amplamente possível?",
@@ -89,7 +90,7 @@
   "ideo_bhl_desc": "Bleeding-Heart Libertarianism is an ideology that deems that an expansion of civil liberties will be the most benefitial to the disadvanatged",
   "ideo_bordiga": "Você é um Bordigista / Comunista de Esquerda Italiano",
   "ideo_bordiga_desc": "Italian Left Communism is an ideology that takes a staunchly anti-revisionist approach to Marx and Lenin's works, being extremely critical of their sucessors' developments",
-  "ideo_castro": "Você é um Castrista",
+  "ideo_castro": "Você é um Castroista",
   "ideo_castro_desc": "Castroism is an ideology derived from Fidel Castro's application of Marxism–Leninism to the conditions of Cuba, mostly differening in the role of the vanguard party",
   "ideo_fascism": "Você é um Fascista Clássico",
   "ideo_fascism_desc": "Fascism is a form of far-right, authoritarian ultranationalism characterized by dictatorial power, forcible suppression of opposition and strong regimentation of society and of the economy",
@@ -127,9 +128,9 @@
   "ideo_marksoc_desc": "Market socialism is an ideology that combines the socialist ideal of worker ownership of the means of production with the competition and resource allocation provided by a market economy",
   "ideo_minarch": "Você é um Minarquista",
   "ideo_minarch_desc": "Minarchism is an ideology that deems that the state's sole purposes are to protect its citizens' rights to property, bring criminals to justice and to guard the country's territory against any invasions.",
-  "ideo_mlm": "Você é um Marxista-Leninista-Maoísta",
+  "ideo_mlm": "Você é um Marxista–Leninista–Maoísta",
   "ideo_mlm_desc": "Marxism–Leninism–Maoism is an ideology devised by the Communist Party of Peru that synthesizes the ideas of Marxism–Leninism and Maoism, rejecting certain aspects from the latter like the 3 worlds theory.",
-  "ideo_ml": "Você é um Marxista-Leninista",
+  "ideo_ml": "Você é um Marxista–Leninista",
   "ideo_ml_desc": "Marxism–Leninism is an ideology that deems that establishing and developing socialism in 1 country is a necessity before exporting the revoltion to neighbouring states, an idea that contrasts with the Trotskyist ideal of permanent revolution.",
   "ideo_mutualism": "Você é um Mutualista",
   "ideo_mutualism_desc": "Mutualism is an ideology who seeks to establish a stateless society based around a combination of free trade of goods between individuals, as long as a mutual credit bank and mutual aid structures.",
@@ -143,7 +144,7 @@
   "ideo_nazcap_desc": "National Capitalism is an economically right wing, culturally traditionalist, nationalist and fascist ideology",
   "ideo_nazi": "Você é um Nacional-Socialista",
   "ideo_nazi_desc": "National Socialism is a form of fascism, with disdain for liberal democracy and the parliamentary system. It incorporates fervent antisemitism, anti-communism, scientific racism, and the use of eugenics into its creed.",
-  "ideo_neocon": "Você é um Neoconservadorista",
+  "ideo_neocon": "Você é um Neoconservador",
   "ideo_neocon_desc": "Neoconservativism promotes democracy and interventionism in international affairs, including peace through strength, and are known for espousing disdain for communism and political radicalism.",
   "ideo_neolib": "Você é um Neoliberal",
   "ideo_neolib_desc": "Neoliberalism is a fusion of neoclassical and Keynesian economic ideas that seeks to strike a balance between regulations and Laissez-Faire",
