--- a/scripts/l10n/zhtw.json
+++ b/scripts/l10n/zhtw.json
@@ -2,10 +2,10 @@
   "lang_name": "繁體中文",
   "translators": "<li> <a href=\"https://github.com/rootmelo92118\" >Kitayama Shouko</a></li>",
   "ui_index_title": "Ideosorter / 思想篩",
-  "ui_index_text": "<h2>Ideosorter 是什麼？</h2><p>Ideosorter 本質上是一个政治測驗，它會通過向你提出問題來得出一个與你的觀點最接近的意識形態。這個測試將基於流程圖模型，根據你對這些問題的回答，把你的政治立場分為<span id='ideo_lenght'></span>種不同意識型態之一。也許你會發現一些你自己都不知道的東西!</p><h2>有個問題我不知道!</h2><p>作者們已經盡量使任何術語容易查找。如果你有什麼不理解的地方，請告訴作者，這樣他們就可以做一些修改。</p><h2>我不喜歡我被匹配到的意識形態!</h2><p>¯\\_(ツ)_/¯</p>",
+  "ui_index_text": "<h2>Ideosorter 是什麼？</h2><p>Ideosorter 本質上是一个政治測驗，它會通過向你提出問題來得出一个與你的觀點最接近的意識形態。這個測試將基於流程圖模型，根據你對這些問題的回答，把你的政治立場分為<span id='ideo_length'></span>種不同意識型態之一。也許你會發現一些你自己都不知道的東西!</p><h2>有個問題我不知道!</h2><p>作者們已經盡量使任何術語容易查找。如果你有什麼不理解的地方，請告訴作者，這樣他們就可以做一些修改。</p><h2>我不喜歡我被匹配到的意識形態!</h2><p>¯\\_(ツ)_/¯</p>",
   "ui_index_start": "點擊開始",
   "ui_index_contacts": "作者",
-  "ui_index_contact_info": "<p>TheGhostOfInky#9229</p><p>theghostofinky@gmail.com</p><p><a href=\"https://github.com/Ideosorter/ideosorter.github.io\">GitHub Page</a></p>",
+  "ui_index_contact_info": "<p>TheGhostOfInky#2853</p><p>theghostofinky@gmail.com</p><p><a href=\"https://github.com/Ideosorter/ideosorter.github.io\">GitHub Page</a></p>",
   "ui_quiz_title": "思想篩",
   "ui_quiz_back": "返回上一個",
   "ui_results_title": "思想篩",
