--- a/scripts/l10n/en.json
+++ b/scripts/l10n/en.json
@@ -2,10 +2,11 @@
   "lang_name": "English",
   "translators": "<li> <a href=\"https://github.com/TheGhostOfInky\" >TheGhostOfInky</a></li><li> <a href=\"https://github.com/sp00ky-guy\" >sp00ky-guy</a></li>",
   "ui_index_title": "Ideosorter",
-  "ui_index_text": "<h2>What is Ideosorter?</h2><p>Ideosorter is, in essence, a political quiz that attempts to assign an ideology that matches your views the closest by asking questions to you based on a flowchart model. This test will sort you into one of <span id='ideo_lenght'></span> different ideologies based on your answers to these questions; maybe you'll discover something you didn't know about yourself!</p><h2>I don't understand one of the questions!</h2><p>If there's anything you don't understand, we've tried to make any terminology easily looked up, and if it's still not clear, tell us so we can make some changes to the questions!</p><h2>I don't like my matched ideology!</h2><p>¯\\_(ツ)_/¯</p>",
+  "ui_index_text": "<h2>What is Ideosorter?</h2><p>Ideosorter is, in essence, a political quiz that attempts to assign an ideology that matches your views the closest by asking questions to you based on a flowchart model. This test will sort you into one of <span id='ideo_length'></span> different ideologies based on your answers to these questions; maybe you'll discover something you didn't know about yourself!</p><h2>I don't understand one of the questions!</h2><p>If there's anything you don't understand, we've tried to make any terminology easily looked up, and if it's still not clear, tell us so we can make some changes to the questions!</p><h2>I don't like my matched ideology!</h2><p>¯\\_(ツ)_/¯</p>",
   "ui_index_start": "Click here to start!",
+  "ui_index_tree": "See results tree",
   "ui_index_contacts": "Contacts:",
-  "ui_index_contact_info": "<p>TheGhostOfInky#9229</p><p>theghostofinky@gmail.com</p><p><a href=\"https://github.com/Ideosorter/ideosorter.github.io\">GitHub Page</a></p>",
+  "ui_index_contact_info": "<p>TheGhostOfInky#2853</p><p>theghostofinky@gmail.com</p><p><a href=\"https://github.com/Ideosorter/ideosorter.github.io\">GitHub Page</a></p>",
   "ui_quiz_title": "Ideosorter - Quiz",
   "ui_quiz_back": "back",
   "ui_results_title": "Ideosorter - Results",
@@ -66,11 +67,11 @@
   "question_bankjews": "Do you believe that the source economic problems faced by workers is down to Jewish bankers?",
   "question_aboveall2": "Do you think that the nation should be of most importance above all?",
   "question_agriculture_industrial": "Should society be focused more on agriculture than on industrial work?",
-  "question_synd3": "Should society be organised through unions?",
+  "question_synd3": "Should society be organized through unions?",
   "ideo_4theory": "You're a Fourth Theorist",
-  "ideo_4theory_desc": "The fourth theory is an ideology concieved by the Russian political analyst Aleksandr Dugin that seeks to find a new poltiical theory past Liberalism, Marxism and Fascism.",
+  "ideo_4theory_desc": "The fourth theory is an ideology conceived by the Russian political analyst Aleksandr Dugin that seeks to find a new political theory past Liberalism, Marxism and Fascism.",
   "ideo_agorism": "You're an Agorist",
-  "ideo_agorism_desc": "Agorism is an ideology concieved by Samuel Edward Konkin III that seeks to establish a society in which all exchanges are voluntary, by the means of engaging in counter-economic activities.",
+  "ideo_agorism_desc": "Agorism is an ideology conceived by Samuel Edward Konkin III that seeks to establish a society in which all exchanges are voluntary, by the means of engaging in counter-economic activities.",
   "ideo_agsoc": "You're an Agrarian Socialist",
   "ideo_agsoc_desc": "Agrarian Socialism is an ideology that seeks to combine an agrarian lifestyle and socialist economic system, mostly focusing on land redistribution and social ownership of land.",
   "ideo_ancap": "You're an Anarcho-Capitalist",
@@ -82,11 +83,11 @@
   "ideo_angeo": "You're a Geoanarchist",
   "ideo_angeo_desc": "Geo-anarchism is an ideology that advocates for the establishment of a stateless society where private ownership of businesses is present but land is commonly owned and its usage is taxed to a mutual community fund.",
   "ideo_anprim": "You're an Anarcho-Primitivist",
-  "ideo_anprim_desc": "Anarcho-Primitivism is an ideology that advocates for a return to pre-civilization life. It is unique in its opposition to agrculture and pecuary and the embracing of a hunter-gatherer lifestyle",
+  "ideo_anprim_desc": "Anarcho-Primitivism is an ideology that advocates for a return to pre-civilization life. It is unique in its opposition to agriculture and aquaculture and the embracing of a hunter-gatherer lifestyle",
   "ideo_ansynd": "You're an Anarcho-Syndicalist",
   "ideo_ansynd_desc": "Anarcho-Syndicalism is an ideology that seeks to use the power of workers' movements to establish a post-capitalist stateless society based on worker ownership of the means of production",
   "ideo_bhl": "You're a Bleeding-Heart Libertarian",
-  "ideo_bhl_desc": "Bleeding-Heart Libertarianism is an ideology that deems that an expansion of civil liberties will be the most benefitial to the disadvanatged",
+  "ideo_bhl_desc": "Bleeding-Heart Libertarianism is an ideology that deems that an expansion of civil liberties will be the most beneficial to the disadvantaged",
   "ideo_bordiga": "You're a Bordigist/Italian Left-Communist",
   "ideo_bordiga_desc": "Italian Left Communism is an ideology that takes a staunchly anti-revisionist approach to Marx and Lenin's works, being extremely critical of their sucessors' developments",
   "ideo_castro": "You're a Castroist",
@@ -96,7 +97,7 @@
   "ideo_clerfash": "You're a Clerical Fascist",
   "ideo_clerfash_desc": "Clerical fascism is an ideology that combines the political and economic doctrines of fascism with clericalism",
   "ideo_councom": "You're a Council Communist",
-  "ideo_councom_desc": "Council Communism is an ideology that deems that a sucessful socialist society must be one managed by workers' councils and not political parties",
+  "ideo_councom_desc": "Council Communism is an ideology that deems that a successful socialist society must be one managed by workers' councils and not political parties",
   "ideo_deleon": "You're a De Leonist",
   "ideo_deleon_desc": "De Leonism is an ideology that combines syndicalist labor organization with Marxist ideas such as the concept of a Dictatorship of the Proletariat",
   "ideo_demsoc": "You're a Democratic Socialist",
@@ -106,7 +107,7 @@
   "ideo_distributism": "You're a Distributist",
   "ideo_distributism_desc": "Distributism is a third-way, free market, center-right ideology",
   "ideo_geolib": "You're a Geolibertarian",
-  "ideo_geolib_desc": "Geolibertarianism is an ideology that incorpotates the georgist principles of free trade, free land and the value taxes with the liberatarian principle of minimal government.",
+  "ideo_geolib_desc": "Geolibertarianism is an ideology that incorporates the georgist principles of free trade, free land and the value taxes with the libertarian principle of minimal government.",
   "ideo_georgism": "You're a Georgist",
   "ideo_georgism_desc": "Georgism is an ideology that deems that for a truly free market to exist first the monopoly on land must be broken. It advocates for a land value tax that if implemented properly will in essence decomofify land ownership",
   "ideo_leftroth": "You're a Left-Rothbardian",
@@ -122,7 +123,7 @@
   "ideo_lwma": "You're a Left-Wing Market Anarchist",
   "ideo_lwma_desc": "Left-Wing Market Anarchism is an ideology that seeks to establish a stateless society based on a post-capitalist market economy",
   "ideo_mao": "You're a Maoist",
-  "ideo_mao_desc": "Maoism is a variety of Marxism–Leninism that Mao Zedong developed for realising a socialist revolution in the agricultural, pre-industrial society of China. The main difference being is that the peasantry are the revolutionary vanguard in pre-industrial societies rather than the proletariat.",
+  "ideo_mao_desc": "Maoism is a variety of Marxism–Leninism that Mao Zedong developed for realizing a socialist revolution in the agricultural, pre-industrial society of China. The main difference being is that the peasantry are the revolutionary vanguard in pre-industrial societies rather than the proletariat.",
   "ideo_marksoc": "You're a Market Socialist",
   "ideo_marksoc_desc": "Market socialism is an ideology that combines the socialist ideal of worker ownership of the means of production with the competition and resource allocation provided by a market economy",
   "ideo_minarch": "You're a Minarchist",
@@ -130,7 +131,7 @@
   "ideo_mlm": "You're a Marxist–Leninist–Maoist",
   "ideo_mlm_desc": "Marxism–Leninism–Maoism is an ideology devised by the Communist Party of Peru that synthesizes the ideas of Marxism–Leninism and Maoism, rejecting certain aspects from the latter like the 3 worlds theory.",
   "ideo_ml": "You're a Marxist–Leninist",
-  "ideo_ml_desc": "Marxism–Leninism is an ideology that deems that establishing and developing socialism in 1 country is a necessity before exporting the revoltion to neighbouring states, an idea that contrasts with the Trotskyist ideal of permanent revolution.",
+  "ideo_ml_desc": "Marxism–Leninism is an ideology that deems that establishing and developing socialism in 1 country is a necessity before exporting the revolution to neighboring states, an idea that contrasts with the Trotskyist ideal of permanent revolution.",
   "ideo_mutualism": "You're a Mutualist",
   "ideo_mutualism_desc": "Mutualism is an ideology who seeks to establish a stateless society based around a combination of free trade of goods between individuals, as long as a mutual credit bank and mutual aid structures.",
   "ideo_natan": "You're a National Anarchist",
@@ -152,19 +153,19 @@
   "ideo_paleobert": "You're a Paleolibertarian",
   "ideo_paleobert_desc": "Paleolibertarianism is an ideology developed by American anarcho-capitalist theorists Murray Rothbard and Lew Rockwell that combines traditional conservative cultural values and social philosophy with a libertarian opposition to government intervention.",
   "ideo_paleocon": "You're a Paleoonservative",
-  "ideo_paleocon_desc": "Paleoconservatism is a form of conservatism that orignally manifestated itself in the isolationist factions of American conservatism who opposed the Vietnam war. Paleoconservatives also commonly oppose free global trade, taking a very protectionist approach with strong tarrifs.",
+  "ideo_paleocon_desc": "Paleoconservatism is a form of conservatism that originally manifested itself in the isolationist factions of American conservatism who opposed the Vietnam war. Paleoconservatives also commonly oppose free global trade, taking a very protectionist approach with strong tariffs.",
   "ideo_patcon": "You're a Paternalistic Conservative",
-  "ideo_patcon_desc": "Paternalistic conservatism is an ideolody that seeks to combine the social democratic principles of regulated capitalism and strong labour unions with traditional values.",
+  "ideo_patcon_desc": "Paternalistic conservatism is an ideology that seeks to combine the social democratic principles of regulated capitalism and strong labour unions with traditional values.",
   "ideo_posadism": "You're a Posadist",
-  "ideo_posadism_desc": "Posadism is a radically accelerationist form of Trostksyism that deems nuclear destruction of captalist society as a necessity to establish socialism globally (with some help of our alien comrades, of course)",
+  "ideo_posadism_desc": "Posadism is a radically accelerationist form of Trostksyism that deems nuclear destruction of capitalist society as a necessity to establish socialism globally (with some help of our alien comrades, of course)",
   "ideo_situationist": "You're a Situationist",
-  "ideo_situationist_desc": "Situationism is a movement of avant-garde libertarian marxists who focused primarily on criticizng capitalism through artistic means",
+  "ideo_situationist_desc": "Situationism is a movement of avant-garde libertarian marxists who focused primarily on criticizing capitalism through artistic means",
   "ideo_socbert": "You're a Social Libertarian",
   "ideo_socbert_desc": "Social Libertarianism is a form of Bleeding-Heart Libertarianism that deems that a universal basic income, combined with maximum individual freedoms, is a necessity to achieve a fair society for all including the most socially disadvantaged",
   "ideo_socdem": "You're a Social Democrat",
-  "ideo_socdem_desc": "Social Democracy is an ideology that seeks to establish a society whereby capitalism is restricted and controlled by the state and strong labour unions in order to achieve bennefitial outcomes to the working class.",
+  "ideo_socdem_desc": "Social Democracy is an ideology that seeks to establish a society whereby capitalism is restricted and controlled by the state and strong labour unions in order to achieve beneficial outcomes to the working class.",
   "ideo_socgeo": "You're a Social Georgist",
-  "ideo_socgeo_desc": "Social Georgism is an ideology that deems that Georgist principles of public land ownership and land value tax prefectly complement a free market welfarist society, the most prominent advocate of this ideology is Chinese revolutionary and first president of the Republic of China, Sun Yat-Sen",
+  "ideo_socgeo_desc": "Social Georgism is an ideology that deems that Georgist principles of public land ownership and land value tax perfectly complement a free market welfarist society, the most prominent advocate of this ideology is Chinese revolutionary and first president of the Republic of China, Sun Yat-Sen",
   "ideo_socnat": "You're a Social Nationalist",
   "ideo_socnat_desc": "Social Nationalism is a form of nationalism based upon national self-determination, popular sovereignty and social equality",
   "ideo_statesoc": "You're a State Socialist",
