Improve zhcn translation (#49)
* Update zhcn.json

* Update zhcn.json

--- a/scripts/l10n/zhcn.json
+++ b/scripts/l10n/zhcn.json
@@ -2,15 +2,16 @@
   "lang_name": "简体中文",
   "translators": "<li> <a href=\"https://github.com/lixiang810\" >lixiang810</a></li>",
   "ui_index_title": "Ideosorter / 思想筛",
-  "ui_index_text": "<h2>Ideosorter 是什么？</h2><p>Ideosorter 本质上是一个政治测验，它将通过向你提出问题来得出一个与你的观点最接近的意识形态。这个测试将基于流程图模型，根据你对这些问题的回答，把你的政治立场分为<span id='ideo_length'></span>种不同意识形态之一。也许你会发现一些你自己都不知道的东西!</p><h2>有个问题我不知道!</h2><p>作者们已经尽量使任何术语容易查找。如果你有什么不明白的地方，请告诉作者，这样他们就可以做一些修改。</p><h2>我不喜欢我被匹配到的意识形态!</h2><p>¯\\_(ツ)_/¯</p>",
+  "ui_index_text": "<h2>Ideosorter 是什么？</h2><p>Ideosorter 本质上是一个政治测验，它将通过向你提出问题来得出一个与你的观点最接近的意识形态。这个测试将基于流程图模型，根据你对这些问题的回答，把你的政治立场分为<span id='ideo_length'></span>种不同意识形态之一。也许你会发现一些你自己都不知道的东西！</p><h2>我不明白其中一个问题！</h2><p>作者们已经尽量使任何术语容易查找。如果你有什么不明白的地方，请告诉作者，这样他们就可以做一些修改。</p><h2>我不喜欢我被匹配到的意识形态！</h2><p>¯\\_(ツ)_/¯</p>",
   "ui_index_start": "点击开始",
+  "ui_index_tree": "查看结果树",
   "ui_index_contacts": "作者",
-  "ui_index_contact_info": "<p>TheGhostOfInky#2853</p><p>theghostofinky@gmail.com</p><p><a href=\"https://github.com/Ideosorter/ideosorter.github.io\">GitHub Page</a></p>",
+  "ui_index_contact_info": "<p>TheGhostOfInky#2853</p><p>theghostofinky@gmail.com</p><p><a href=\"https://github.com/Ideosorter/ideosorter.github.io\">GitHub 页面</a></p>",
   "ui_quiz_title": "思想筛",
   "ui_quiz_back": "后退",
   "ui_results_title": "思想筛",
-  "ui_results_back": "Return to Index",
-  "ui_results_credits": "Credits",
+  "ui_results_back": "返回首页",
+  "ui_results_credits": "贡献者",
   "question_private_property": "生产资料私有制应当存在吗？",
   "question_theo": "社会应当由神的代理人进行管理吗？",
   "question_distributism": "私有财产应当被尽可能广泛分享吗？",
