implements for issue #36

--- a/scripts/l10n/zhcn.json
+++ b/scripts/l10n/zhcn.json
@@ -49,9 +49,9 @@
   "question_3worlds": "你是否认同毛泽东的“三个世界”理论？",
   "question_nep": "你认为在实现社会主义前，需要经历一段很长的国家资本主义时期吗？",
   "question_socinone": "你认为社会主义可以在一个国家内实现吗？",
-  "question_aboveall1": "国家的重要性应该高于一切吗？",
+  "question_aboveall1": "民族的重要性应该高于一切吗？",
   "question_posadism": "你认为实现社会主义的最佳方式是制造 / 等待一场世界末日吗？",
-  "question_rev_ed": "是否应该有一个革命党，在革命期间和革命后对群众进行灌输？",
+  "question_rev_ed": "是否应该有一个革命党，在革命期间和革命后对群众进行教导？",
   "question_synd1": "社会是否应该由工会组织？",
   "question_centplan": "应该实施中央计划经济吗？",
   "question_mediabad": "大众传媒是你对资本主义社会的主要关注点吗？",
@@ -63,7 +63,7 @@
   "question_soc_directstate2": "工人应该直接拥有生产资料，还是应该由国家来控制它们？",
   "question_esobullshit": "政治的本源是什么？是阶级/国家，还是人的本性（人性）？",
   "question_bankjews": "工人面临的经济问题，根源在于犹太银行家吗？",
-  "question_aboveall2": "国家的重要性应该高于一切吗？",
+  "question_aboveall2": "民族的重要性应该高于一切吗？",
   "question_agriculture_industrial": "社会应该更加注重农业生产，而非工业生产",
   "question_synd3": "社会是否应该由工会组织？",
   "ideo_4theory": "你是第四理论者",
@@ -94,8 +94,8 @@
   "ideo_fascism_desc": "法西斯主义是一种极右的、专制的极端民族主义，其特点是使用极权强力镇压反对派，对社会和经济进行全面而强硬的管理。",
   "ideo_clerfash": "你是教权法西斯主义者",
   "ideo_clerfash_desc": "教权法西斯主义是一种将法西斯主义的政治和经济学说与教权主义相结合的意识形态。",
-  "ideo_councom": "你是议会共产主义者",
-  "ideo_councom_desc": "议会共产主义认为，成功的社会主义社会应当由工人议会来运行",
+  "ideo_councom": "你是委员会共产主义者",
+  "ideo_councom_desc": "委员会共产主义认为，成功的社会主义社会应当由工人委员会来运行",
   "ideo_deleon": "你是德·莱昂主义者",
   "ideo_deleon_desc": "德·莱昂主义是一种将工团主义组织与无产阶级专政概念等马克思主义思想相结合的意识形态。",
   "ideo_demsoc": "你是民主社会主义者",
