--- a/scripts/l10n/en.json
+++ b/scripts/l10n/en.json
@@ -152,7 +152,7 @@
   "ideo_orthmarx_desc": "Orthodox Marxism is an economically far left, progressive ideology that looks to achieve a communist society, a stateless, classless, moneyless society.",
   "ideo_paleobert": "You're a Paleolibertarian",
   "ideo_paleobert_desc": "Paleolibertarianism is an ideology developed by American anarcho-capitalist theorists Murray Rothbard and Lew Rockwell that combines traditional conservative cultural values and social philosophy with a libertarian opposition to government intervention.",
-  "ideo_paleocon": "You're a Paleoonservative",
+  "ideo_paleocon": "You're a Paleoconservative",
   "ideo_paleocon_desc": "Paleoconservatism is a form of conservatism that originally manifested itself in the isolationist factions of American conservatism who opposed the Vietnam war. Paleoconservatives also commonly oppose free global trade, taking a very protectionist approach with strong tariffs.",
   "ideo_patcon": "You're a Paternalistic Conservative",
   "ideo_patcon_desc": "Paternalistic conservatism is an ideology that seeks to combine the social democratic principles of regulated capitalism and strong labour unions with traditional values.",
