Removed personal contact info and added note about finding new maintainers

--- a/scripts/l10n/ca.json
+++ b/scripts/l10n/ca.json
@@ -6,7 +6,7 @@
   "ui_index_start": "Fes clic aquí per començar!",
   "ui_index_tree": "Consulta l'arbre de resultats",
   "ui_index_contacts": "Contacte:",
-  "ui_index_contact_info": "<p>TheGhostOfInky#2853</p><p>theghostofinky@gmail.com</p><p><a href=\"https://github.com/Ideosorter/ideosorter.github.io\">GitHub Page</a></p>",
+  "ui_index_contact_info": "<p><a href=\"https://github.com/Ideosorter/ideosorter.github.io\">GitHub Page</a></p>",
   "ui_quiz_title": "Ideosorter - Qüestionari",
   "ui_quiz_back": "enrere",
   "ui_results_title": "Ideosorter - Resultats",
