--- a/scripts/l10n/en.json
+++ b/scripts/l10n/en.json
@@ -6,7 +6,7 @@
   "ui_index_start": "Click here to start!",
   "ui_index_tree": "See results tree",
   "ui_index_contacts": "Contacts:",
-  "ui_index_contact_info": "<p>TheGhostOfInky#2853</p><p>theghostofinky@gmail.com</p><p><a href=\"https://github.com/Ideosorter/ideosorter.github.io\">GitHub Page</a></p>",
+  "ui_index_contact_info": "<p><a href=\"https://github.com/Ideosorter/ideosorter.github.io\">GitHub Page</a></p>",
   "ui_quiz_title": "Ideosorter - Quiz",
   "ui_quiz_back": "back",
   "ui_results_title": "Ideosorter - Results",
