--- a/scripts/l10n/es.json
+++ b/scripts/l10n/es.json
@@ -6,7 +6,7 @@
   "ui_index_start": "Clic aquí para empezar!",
   "ui_index_tree": "Ver árbol de de resultados",
   "ui_index_contacts": "Contactos:",
-  "ui_index_contact_info": "<p>TheGhostOfInky#2853</p><p>theghostofinky@gmail.com</p><p><a href=\"https://github.com/Ideosorter/ideosorter.github.io\">GitHub Page</a></p>",
+  "ui_index_contact_info": "<p><a href=\"https://github.com/Ideosorter/ideosorter.github.io\">GitHub Page</a></p>",
   "ui_quiz_title": "Ideosorter - Quiz",
   "ui_quiz_back": "atrás",
   "ui_results_title": "Ideosorter - Resultados",
