--- a/scripts/l10n/ms.json
+++ b/scripts/l10n/ms.json
@@ -6,7 +6,7 @@
   "ui_index_start": "Klik di sini untuk bermula!",
   "ui_index_tree": "Lihat pokok keputusan",
   "ui_index_contacts": "Hubungi:",
-  "ui_index_contact_info": "<p>TheGhostOfInky#2853</p><p>theghostofinky@gmail.com</p><p><a href=\"https://github.com/Ideosorter/ideosorter.github.io\">GitHub Page</a></p>",
+  "ui_index_contact_info": "<p><a href=\"https://github.com/Ideosorter/ideosorter.github.io\">GitHub Page</a></p>",
   "ui_quiz_title": "Ideosorter - Kuiz",
   "ui_quiz_back": "Kembali",
   "ui_results_title": "Ideosorter - Keputusan",
