--- a/scripts/l10n/uk.json
+++ b/scripts/l10n/uk.json
@@ -6,7 +6,7 @@
     "ui_index_start": "Почати тест!",
     "ui_index_tree": "Подивитись дерево результатів",
     "ui_index_contacts": "Контакти:",
-    "ui_index_contact_info": "<p>TheGhostOfInky (Discord)</p><p>theghostofinky@gmail.com</p><p><a href=\"https://github.com/Ideosorter/ideosorter.github.io\">Сторіна у GitHub</a></p>",
+    "ui_index_contact_info": "<p><a href=\"https://github.com/Ideosorter/ideosorter.github.io\">Сторіна у GitHub</a></p>",
     "ui_quiz_title": "Ideosorter - Тест",
     "ui_quiz_back": "Повернутись",
     "ui_results_title": "Ideosorter - Результати",
