--- a/scripts/l10n/zhcn.json
+++ b/scripts/l10n/zhcn.json
@@ -6,7 +6,7 @@
   "ui_index_start": "点击开始",
   "ui_index_tree": "查看结果树",
   "ui_index_contacts": "作者",
-  "ui_index_contact_info": "<p>TheGhostOfInky#2853</p><p>theghostofinky@gmail.com</p><p><a href=\"https://github.com/Ideosorter/ideosorter.github.io\">GitHub 页面</a></p>",
+  "ui_index_contact_info": "<p><a href=\"https://github.com/Ideosorter/ideosorter.github.io\">GitHub 页面</a></p>",
   "ui_quiz_title": "思想筛",
   "ui_quiz_back": "后退",
   "ui_results_title": "思想筛",
