--- a/scripts/l10n/fr.json
+++ b/scripts/l10n/fr.json
@@ -6,7 +6,7 @@
   "ui_index_start": "Cliquez ici pour commencer !",
   "ui_index_tree": "Voir l'arbre des résultats",
   "ui_index_contacts": "Contacts:",
-  "ui_index_contact_info": "<p>TheGhostOfInky#2853</p><p>theghostofinky@gmail.com</p><p><a href=\"https://github.com/Ideosorter/ideosorter.github.io\">GitHub Page</a></p>",
+  "ui_index_contact_info": "<p><a href=\"https://github.com/Ideosorter/ideosorter.github.io\">GitHub Page</a></p>",
   "ui_quiz_title": "Ideosorter - Quiz",
   "ui_quiz_back": "Retour",
   "ui_results_title": "Ideosorter - Résultats",
