--- a/scripts/l10n/en.json
+++ b/scripts/l10n/en.json
@@ -27,7 +27,7 @@
   "question_tradauthstate": "Do you deem an authoritarian state necessary to secure the values and sovereignty of your nation?",
   "question_corp_cap": "Should the government embrace capitalism or corporatism?",
   "question_markreg": "Should the market be closely regulated?",
-  "question_unions_vs_state": "Should the economy by organized by unions, or by the state?",
+  "question_unions_vs_state": "Should the economy be organized by unions, or by the state?",
   "question_clergygov": "Should the clergy be a part of government?",
   "question_racesuperior": "Do you deem your race to be superior above all others?",
   "question_strong_safety_net": "Should there be a strong social safety net for the disadvantaged in society?",
@@ -181,7 +181,7 @@
   "ideo_tito": "You're a Titoist",
   "ideo_tito_desc": "Titoism is an ideology that seeks to combine the vanguardist nature of Leninism with a market socialist economy and worker owned means of production",
   "ideo_trot": "You're a Trotskyist",
-  "ideo_trot_desc": "Trotskyism is an ideology that deems a permanent revoltuion across the world to be a necessity in establishing socialism, contrasting to the Marxist–Leninist idea of socialism in 1 country",
+  "ideo_trot_desc": "Trotskyism is an ideology that deems a permanent revolution across the world to be a necessity in establishing socialism, contrasting to the Marxist–Leninist idea of socialism in 1 country",
   "btn_yes": "Yes",
   "btn_no": "No",
   "btn_nostate": "The state shouldn't exist",
